--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 
 /* BARRA IZQUIERDA - CHATS */
 #chat {
-    flex-basis: 20%;
+    flex-basis: 23%;
     display: flex;
     flex-direction: column;
 }
@@ -106,20 +106,52 @@
 }
 
 #fondo {
-    background-color: #E8EBE4;
-    flex-basis: 80%;
+    background-color: #F8F8F8;
+    flex-basis: 77%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-#fondo div {
+#img-manos {
     display: flex;
     justify-content: center;
 }
 
-#fondo img {
+#img-manos img {
     width: 60%;
     height: auto;
     border-radius: 5%;
+}
+
+.fondo-texto {
+    width: 60%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+}
+
+.fondo-texto h1 {
+    color: #282D2E;
+    text-align: center;
+    margin-top: 30px;
+    flex-basis: 100%;
+    font-family: 'Roboto', sans-serif;
+    font-size: 60px;
+    font-weight: 400;
+}
+
+.fondo-texto h4 {
+    color: #282D2E;
+    text-align: center;
+    flex-basis: 100%;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 25px;
+}
+
+.fondo-texto span {
+    font-weight: 700;
 }
